--- a/style.css
+++ b/style.css
@@ -36,3 +36,14 @@ img{
 #social i{
     margin: 10px 30px;
 }
+.contact{
+    text-align:center;
+    padding:50px 0;
+}
+.contact input[type="email"]{
+       width:30%;
+       min-height:40px;
+}
+.contact input[type="submit"]{
+    border:none;
+}
